<resources>
    <string name="app_name">My Book Shelf</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">My Book Shelf</string>
    <string name="nav_header_subtitle">Bring order to your home library! :)</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="tab1_library">Library</string>
    <string name="tab2_borrowed_books">Borrowed books</string>
    <string name="tab3_lended_books">Lended books</string>

    <string name="owner">Owner:</string>
    <string name="recipient">Recipient:</string>
    <string name="return_date">Return date:</string>
    <string name="receive_date">Receive date:</string>
    <string name="transfer_date">Transfer date:</string>

    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="rating">Rating:</string>
    <string name="isEl">Is electronic:</string>
    <string name="comment">Comment:</string>

    <!-- COVER -->
    <string name="load_cover">Load cover</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_internet">From Internet</string>

    <string name="no_books_found">No covers found. Possible cause: title or author typed incorrectly</string>
    <string name="choose_cover">Choose cover</string>
    <string name="close">Close</string>

    <string name="save">Save changes</string>

    <string name="hint_title">Enter book title</string>
    <string name="hint_author">Enter author</string>
    <string name="hint_comment">Enter you comment</string>
    <string name="hint_owner">Enter owner name</string>
    <string name="hint_recipient">Enter recipient name</string>

    <string name="notif_switch">Enable notifications</string>
    <string name="notif_label">Time for notification</string>
    <string name="notif_title">Notifications</string>
    <string name="language_label">Language</string>
    <string name="language_title">Choose language</string>
    <string name="language_russian">Russian</string>
    <string name="language_english">English</string>

    <string name="permission_denied">Permission denied</string>
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="notifications_disabled">Notifications disabled</string>

    <!-- For messages -->
    <string name="message">Message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="del_message">Do you really want to delete this book?</string>

    <string name="validation_title_message_begin">"Title should be not empty and contain not more than "</string>
    <string name="validation_title_message_end">" characters"</string>
    <string name="validation_message_end">" characters required"</string>
    <string name="validation_message_begin">Not more than</string>
    <string name="book_not_valid">Please, fill all required fields correctly to save this book</string>
    <string name="book_receive_date_not_valid">RECEIVE date should not be greater than RETURN date</string>
    <string name="book_transfer_date_not_valid">TRANSFER date should not be greater than RETURN date</string>


</resources>